# svgdx-pandoc

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
example/: example.docx  example.epub  example.html  example.md  example.pptx  refresh.sh
src/: convert.rs  main.rs  plugin.rs  transform.rs
