[package]
name = "svgdx-pandoc"
version = "0.10.0"
description = "pandoc filter for svgdx codeblocks in Markdown"
authors = ["Ben Bass <benbass@codedstructure.net>"]
repository = "https://github.com/codedstructure/svgdx-pandoc"
keywords = ["pandoc", "svg", "svgdx", "diagrams"]
license = "MIT"
edition = "2021"

[dependencies]
serde_json = "1.0"
svgdx = { version = "0.25.0", default-features = false }
tempfile = "3.20.0"
